lang/macro/tests/ui/fail/12-const-function.rs
use liquid_lang as liquid;

#[liquid::contract(version = "0.1.0")]
mod noop {
    #[liquid(storage)]
    struct Noop {}

    #[liquid(methods)]
    impl Noop {
        pub fn constructor(&mut self) {}

        pub const fn noop(&self) {}
    }
}

fn main() {}
