lang/macro/tests/ui/fail/12-const-function.stderr
error: `const` is not supported for functions in contract
  --> $DIR/12-const-function.rs:12:13
   |
12 |         pub const fn noop(&self) {}
   |             ^^^^^
